--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="google-signin-client_id" content="427314837991-ggniallqhhu0oguqe24qbg80hob0b85o.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Startseite</title>
+</head>
+<body>
 
+    <h1>Startseite des Gymnasium Gummersbach</h1>
+    <p>Dieser Inhalt darf jeder sehen!</p>
+    <h3>Für den interner Bereich, bitte anmelden!
+    <div class="g-signin2" data-onsuccess="onSignIn"></div> </h3>
+    <div id="content"></div>
+
+    <script>
+    function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log('Name: ' + profile.getName());
+        console.log('Image URL: ' + profile.getImageUrl());
+        console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+        document.querySelector('#content').innerHTML = profile.getName();
+        window.location.href = "intern.html";
+      }
+    </script>
+
+</body>
+
+</html>
